# Psy-Bandi

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  streamlit_app.py
backend/app/: __init__.py  central_health_catalog.py  hospital_health_catalog.py  main.py  ministerial_catalog.py  models.py  national_health_catalog.py  northern_health_catalog.py  puglia_aol_catalog.py  schemas.py  seed_data.py  source_catalog.py  streamlit_support.py  target_health_catalog.py
backend/app/api/: admin.py  public.py
backend/app/core/: config.py  (+2 more)
backend/certs/: README.md
backend/tests/: test_alert_notifications.py  test_arcs_fvg_importer.py  test_asdaa_alto_adige_importer.py  test_asl_piemonte_importer.py  test_asl_roma2_importer.py  test_ast_marche_importer.py  test_asuit_trentino_importer.py  test_ats_liguria_importer.py  test_ausl_romagna_importer.py  test_azienda_zero_importer.py  test_azienda_zero_piemonte_importer.py  test_catalog_sources_importer.py  test_classifier.py  test_comune_venezia_importer.py  test_dates.py  test_deadline_status.py  test_dedupe.py  test_deep_html_sources_importer.py  test_inail_importer.py  test_inpa_importer.py  test_inps_importer.py  test_institutional_importer.py  test_myportal_veneto_importer.py  test_public_filters.py  test_public_refresh.py  test_public_snapshot.py  test_puglia_aol_importer.py  test_source_catalog.py  test_source_telemetry.py  test_streamlit_support.py  test_target_health_html_importer.py  test_usl_umbria1_importer.py  test_usl_umbria2_importer.py
(+72 files in other folders)
